# Calculator

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  compile.sh
include/calculator/: Calculator.h  MainWindow.h  calculator.h
src/: Calculator.cpp  Main.cpp  Main.h  MainWindow.cpp  calculator.cpp  main.cpp
tests/: test.cpp  test_calculating.cpp  test_mainwindow.cpp
